# django-recipe-generator

./: .coverage  .flake8  Dockerfile  README.md  datadump.json  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml
django_recipe_generator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_recipe_generator/recipe_generator/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
django_recipe_generator/recipe_generator/api/: permissions.py  serializers.py  urls.py  views.py
django_recipe_generator/recipe_generator/fixtures/: ingredients.csv  macros.csv  recipe_ingredients.csv  recipes.csv
django_recipe_generator/recipe_generator/management/commands/: load_data.py
django_recipe_generator/recipe_generator/migrations/: 0001_initial.py  0002_recipe_elevating_twist.py  0003_recipe_ai_generation_status.py
django_recipe_generator/recipe_generator/tests/: test_api.py  test_models.py  test_views.py
django_recipe_generator/services/: gemini_client.py  ingredients.py
django_recipe_generator/templates/: 403.html  404.html  logged_out.html  project_page.html
django_recipe_generator/templates/account/: login.html  logout.html  signup.html
django_recipe_generator/templates/admin/: logout.html
django_recipe_generator/templates/recipe_generator/: create.html  index.html  ingredient_create.html  ingredient_delete.html  ingredient_detail.html  ingredient_edit.html  ingredient_list.html  recipe_create.html  recipe_delete.html  recipe_detail.html  recipe_edit.html  recipe_list.html
django_recipe_generator/templates/registration/: login.html  register.html
django_recipe_generator/templates/socialaccount/: login.html
