[project]
name = "django-recipe-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "django-debug-toolbar>=5.2.0",
    "flake8>=7.2.0",
    "flake8-docstrings>=1.7.0",
]
